--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>neo4j-java-driver</artifactId>
             <version>4.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.aksingh</groupId>
+            <artifactId>owm-japis</artifactId>
+            <version>2.5.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
