--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 
     <dependencies>
 
+  	<dependency>
+    	   <groupId>org.neo4j</groupId>
+    	   <artifactId>neo4j-ogm-embedded-driver</artifactId>
+    	   <version>3.2.19</version>
+    	   <scope>runtime</scope>
+	</dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
