--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
             <version>4.2.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.10</version>
+        </dependency>
 
     </dependencies>
 
